examples/test/testpolicy3561.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3561
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key28: value32
      key33: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value21
          key32: value39
      podSelector:
        matchLabels:
          key46: value13
          key25: value38
          key20: value41
